Worked on Slides

--- a/src/slides/01_05.md
+++ b/src/slides/01_05.md
@@ -7,44 +7,55 @@ slide: '<!-- .slide: data-visibility="hidden"-->'
 
 # Scheduling Actions
 
-> >
-
-When working with project, it's really important to be able to store certain ids, variables and special passwords securely. For this Challenge, I want you to store a secret using Github, and retrieve it using Github Actions.
+You've got a Github Action and you want to make sure it runs not just once or when the users push something to your repo, but everyday at 8:30am. How would you do that?
 
 I'll give you a couple of seconds to pause the video and see how you'd have solved it.
 
-To store a secret in Github, you'll need to
+# Solution
 
-1. Go to your account
-1. Find a repository that you want to add a secret to
-1. Click on settings
-1. Choose secrets
+For this example. I'm using the same action from the previous video, but you can use any action you want. The trick here is that we can run an action using a cron command.
 
-Now, you can create a secret that will be stored by Github and accessible, but not viewable by anyone with access to this account.
+Because we're using that action and it does require a Secret, make sure you run this on a repository that has that secret stored in it if you want to use that same action.
 
-1. Click on New Repository Secret
-2. Give the Secret a Name
-3. Paste in the value of your secret.
+I'm going to modify the `on` section of the action so that it uses cron to run at a specified time.
 
-Before you click on the Add Secret button, make sure that this secret is stored somewhere else securely. You can use a password manager to store a secure note.
+```
+on:
+  cron: '30 8 * * *'
+```
 
-You won't be able to retrieve this secret once you hit that green button.
+A cron command lets you use a special syntax that lets you specify a specific or a recurring date. It has five fields
 
-1. Hit the Add Secret button
+┌───────────── minute (0 - 59)
+│ ┌───────────── hour (0 - 23)
+│ │ ┌───────────── day of the month (1 - 31)
+│ │ │ ┌───────────── month (1 - 12 or JAN-DEC)
+│ │ │ │ ┌───────────── day of the week (0 - 6 or SUN-SAT)
+│ │ │ │ │
 
-Your options after you add a secret are only to remove it or update it.
+---
 
-You can use this secret with Github Actions as part of your build process.
+## Options
+
+`*` The wildcard value runs every instance. So if you want to run every day of the month you would use the wildcard value, otherwise, specify a number.
+
+`,` A comma lets you run a command in more than one time slot. So if we wanted to run this on sunday and monday only, you could use 0,1 for the day of the week value.
+
+`-` You can also use a range of values so that if you use 1-5 for the day of the week value, it would run Monday through Friday.
+
+`/` You can also step through a series of values. So if you wanted to run an action every five minutes. You could use 0/5 as the value for minute.
+
+The maximum amount of time you can run something IS indeed every five minutes and remember that when running a lot of actions you might run into usage limits and increased pricing.
+
+If you want to play around with the timing before you submit an action, a great site to check is [Crontab Guru](https://crontab.guru/), which has an interactive tool and links to examples and tips you can use when running cron jobs.
+
+> >
 
 ```
 name: Favorite Google Fonts
 
 on:
-  push:
-    branches: [ main ]
-  pull_request:
-    branches: [ main ]
-  workflow_dispatch:
+  cron: '30 8 * * *'
 
 jobs:
   build:
