--- a/src/slides/01_06.md
+++ b/src/slides/01_06.md
@@ -1,65 +1,83 @@
 ---
-title:  Docker Container Actions
+title: Docker Container Actions
 slide: '<!-- .slide: data-visibility="hidden"-->'
 ---
 
 <!-- .slide: data-state="layout-title" class="bg-dark"-->
 
-#  Docker Container Actions
+# Docker Container Actions
 
-> >
+Actions are great, but the syntax for running commands can be a bit limiting, plus they're a little hard to share. You can create actions more explicitly by using docker containers and then having it execute your shell scripts, but how would you do that?
 
-When working with project, it's really important to be able to store certain ids, variables and special passwords securely. For this Challenge, I want you to store a secret using Github, and retrieve it using Github Actions.
+I'll give you a couple of seconds to pause the video and see how you'd have done something like this.
 
-I'll give you a couple of seconds to pause the video and see how you'd have solved it.
+You can take a look at an example of how to do this in my [Copy To Branches Action](https://github.com/planetoftheweb/copy-to-branches).
 
-To store a secret in Github, you'll need to
+It's job is to let you copy files from one branch to another. It actually has a ton of options, but instead of just running this as an action, you can create a more self contained project that can be added to the Github Marketplace and more easily shared with others.
 
-1. Go to your account
-1. Find a repository that you want to add a secret to
-1. Click on settings
-1. Choose secrets
+# Analyzing the Files
 
-Now, you can create a secret that will be stored by Github and accessible, but not viewable by anyone with access to this account.
+You can see that this repository is a pretty typical repo with a `README`, a `LICENSE` and a `.gitignore` file.
 
-1. Click on New Repository Secret
-2. Give the Secret a Name
-3. Paste in the value of your secret.
+Here's the rest of the files you'd need.
 
-Before you click on the Add Secret button, make sure that this secret is stored somewhere else securely. You can use a password manager to store a secure note.
+`actions.yml`
 
-You won't be able to retrieve this secret once you hit that green button.
+This is the main configuration file for your actions and determines how it will run. It looks a lot like a package.json file, but it is written in YAML, the same language we use to write github actions.
 
-1. Hit the Add Secret button
+The important thing in this document is that we're asking it to run our action using docker using an image called Dockerfile. Docker lets you run actions in their own virtual machines and you can be a lot more flexible about the features your machine uses.
 
-Your options after you add a secret are only to remove it or update it.
+I'm also passing along some values here using Github Environment Variables so that I can use this in my bash script. If you are following these in order, you'll notice that I'm using the github.actor environment variable. You can get more information about them at [this URL](https://docs.github.com/en/actions/reference/environment-variables).
 
-You can use this secret with Github Actions as part of your build process.
+# Dockerfile
 
 ```
-name: Favorite Google Fonts
-
-on:
-  push:
-    branches: [ main ]
-  pull_request:
-    branches: [ main ]
-  workflow_dispatch:
-
-jobs:
-  build:
-    runs-on: ubuntu-latest
-    env:
-      google_api_key: ${{secrets.GOOGLE_API_KEY}}
-
-    steps:
-      - uses: actions/checkout@v2
-
-      - name: Get the Font List
-        run: |
-          git config --global user.name "${GITHUB_ACTOR}"
-          git config --global user.email "${INPUT_EMAIL}"
-          curl -s --url https://www.googleapis.com/webfonts/v1/webfonts?key=${{secrets.GOOGLE_API_KEY}} >> fontsList.json
-          git add -A && git commit -m "Updated Fonts List"
-          git push --set-upstream origin main
+FROM alpine:latest
 ```
+
+The dockerfile is a document that specifies the machine you want to use and how it will be configured. Notice that I'm using a type of machine called alpine. It is much faster than using Ubuntu Linux, which is what most people use when working with Actions.
+
+```
+RUN apk --update add git
+RUN apk add --no-cache --upgrade bash
+```
+
+Docker machines are like baby machines, they dont' come with much installed, so we are using a utility called apk and adding git here so we can run some git commands on this action.
+
+We're also adding bash so we can use regular bash scripting here.
+
+```
+COPY entrypoint.sh /entrypoint.sh
+```
+
+We'll need to copy our entrypoint script file from this repository to this new machine so we can run it.
+
+```
+ENTRYPOINT ["/entrypoint.sh"]
+```
+
+Finally we specify that shell script as the entrypoint which runs after this machine is initialized.
+
+Now whenever this machine runs, it will run whatever shell script you have in the `entrypoint.sh` file.
+
+# Shell Script
+
+This script looks pretty complicated, but it's doing a lot of what we did when we ran the Secrets script.
+
+You can see that there's a section where we configure git with the email and password from our environment variables.
+
+Then we also receive environment variables that are options the user can specify.
+
+Finally we run our shell script.
+
+You can see that unlike the types of commands that we can run on regular github actions we have the full power of bash scripting available to us. We can run conditionals like if statements as well as loops.
+
+As with our secrets action, we can push all of our changes back to the repo when we're done.
+
+# Publishing the Script
+
+To share this with others, you end up creating a release, which you can do once you've written your action by clicking here. That will give you an option of posting this action in the Github Marketplace and sharing it with the world or your team.
+
+# Conclusion
+
+You can see that you can create much more powerful actions by using this docker method. It's a bit more work, but it's worth it since it's a real repository that can eb collaborated on and easily shared with others.
