--- a/src/slides/01_04.md
+++ b/src/slides/01_04.md
@@ -36,15 +36,96 @@ Your options after you add a secret are only to remove it or update it.
 
 You can use this secret with Github Actions as part of your build process.
 
+## Walking through the code
+
+Let's take a look at the action that will take care of this:
+
+```yml
+name: Favorite Google Fonts
 ```
+
+First, we start off by giving an action a name.
+
+```yml
+on:
+  push:
+    branches: [main]
+  pull_request:
+    branches: [main]
+```
+
+We can specify when this action runs, and we're choosing to trigger it when someone pushes to the main branch. I'm also showing you that you can run an action when a pull request to the main branch is approved.
+
+```yml
+jobs:
+  build:
+    runs-on: ubuntu-latest
+```
+
+Next, we ask that this job run on an ubuntu server
+
+```
+    env:
+      google_api_key: ${{secrets.GOOGLE_API_KEY}}
+```
+
+Now we can make a reference to the secret we created earlier by using an environment variable that will get used by our script.
+
+```YML
+    steps:
+      - uses: actions/checkout@v2
+```
+
+Since we want to perform these actions with our repo, we want to use Githubs checkout action so we'll have access to those files.
+
+```yml
+- name: Get the Font List
+```
+
+jobs can be named since you can run more than one job in an action.
+
+```
+  run: |
+```
+
+We can run our commands as if we were typing them from the terminal. If we ant to type in more than one command we can use the pipe character
+
+```
+git config --global user.name "${GITHUB_ACTOR}"
+git config --global user.email "${INPUT_EMAIL}"
+```
+
+When you run github commands in this linux terminal, you're going to be running them as if this was a new machine and whenever you are running a new machine, you'll need to configure your user name and email.
+
+Github gives you a few environment variables you can use to set this up. I'm using the github_actor as well as input_email variables. You can get a list of all of the variables available at [this URL](https://docs.github.com/en/actions/reference/environment-variables).
+
+```
+curl -s --url https://www.googleapis.com/webfonts/v1/webfonts?key=${{secrets.GOOGLE_API_KEY}} >> fontsList.json
+```
+
+Now we can run the curl command in the terminal, which lets you pull up a website. The -s option means CURL will run silently since we just want the output of what this URL will give us. The URL option lets you specify the URL.
+
+We want to output the results of this command to a file, so we're using fontsList.json.
+
+```
+git add -A && git commit -m "Updated Fonts List"
+git push --set-upstream origin main
+```
+
+It's great that we've generated the report and created a file, but we want the file to be added to our repository. to do that we're going to need to add, commit and then push the files back to our repository.
+
+# Conclusion
+
+The ability to do something using Actions on Github and having that generate a file for us is pretty awesome. I'm sure you're already thinking about what else you can do with this technique.
+
+# Finished Code
+
+```yml
 name: Favorite Google Fonts
 
 on:
   push:
-    branches: [ main ]
-  pull_request:
-    branches: [ main ]
-  workflow_dispatch:
+    branches: [main]
 
 jobs:
   build:
