pushed new content

--- a/src/slides/01_01.md
+++ b/src/slides/01_01.md
@@ -25,6 +25,10 @@ But there's a much faster and more flexible way. You can use a project called de
 
 Degit lets you do exactly what we're looking for. We'll also need to use npx, which comes when you install node.js.
 
+---
+
+# Running Degit
+
 The command looks like this:
 
 ```
@@ -40,6 +44,10 @@ In addition to the username, you can specify a project's name.
 You can even choose to only copy an existing branch, release or hash by adding that after a hashtag symbol.
 
 Then finally, you specify what you want to call the project locally separating the name with a space.
+
+---
+
+# Sample Command
 
 Let's try this command.
 
