--- a/src/slides/01_02.md
+++ b/src/slides/01_02.md
@@ -5,16 +5,17 @@ slide: '<!-- .slide: data-visibility="hidden"-->'
 
 <!-- .slide: data-state="layout-title" class="bg-dark"-->
 
+---
+
 # Merging a Linear History
 
 > >
 
 Let's say that you are working on a new feature for your project, but in the meantime someone is working on a different feature. What's a good way to add your commits after their commits without creating a messy timeline.
 
-
 I'll give you a couple of seconds to pause the video and see how you'd have solved it.
 
-One of the first commands you learn when working with Github is how to merge your changes onto a master branch. 
+One of the first commands you learn when working with Github is how to merge your changes onto a master branch.
 
 Merging is the more common of the merge commands, but there's another merging strategy that will work better to create a more linear history that take into account other changes that users might have performed.
 
@@ -28,7 +29,7 @@ Let's switch over to Github and take a look at what's happening there.
 
 I can see that my new commits generated the option to create a pull request.
 
-We can take a look at the changes, which are pretty simple. 
+We can take a look at the changes, which are pretty simple.
 
 However if we were to look at the history, someone already made changes to the project.
 
@@ -36,7 +37,10 @@ When you merge a project you have three options for making the changes. The most
 
 However the third option...a rebase will give us a cleaner history. Here's how it's different.
 
+---
+
 # Rebase
+
 - Replays commits at the end of a branch
 - Creates a cleaner, more linear project history
 
@@ -44,11 +48,11 @@ Some teams actually require rebasing instead of the traditional merge methodolog
 
 A couple of important notes
 
-# Rebase
+---
+
+# Important
+
 - A Rebase is destructive unlike merge
   Alghought it creates a cleaner history, rebase is adding new commits to the end of a branch and these are similar, but technically different than commits you've done in the past.
 - Don't rebase a public branch
-  Because of this, it's important that you don't rebase a public branch, because to create the cleaner history, it's ignoring your original branch and making new copies of your commits on the branch your rebasing to. 
-
-
-
+  Because of this, it's important that you don't rebase a public branch, because to create the cleaner history, it's ignoring your original branch and making new copies of your commits on the branch your rebasing to.
