--- a/src/slides/01_04.md
+++ b/src/slides/01_04.md
@@ -36,7 +36,9 @@ Your options after you add a secret are only to remove it or update it.
 
 You can use this secret with Github Actions as part of your build process.
 
-## Walking through the code
+---
+
+# Walking through the code
 
 Let's take a look at the action that will take care of this:
 
@@ -114,9 +116,13 @@ git push --set-upstream origin main
 
 It's great that we've generated the report and created a file, but we want the file to be added to our repository. to do that we're going to need to add, commit and then push the files back to our repository.
 
+---
+
 # Conclusion
 
 The ability to do something using Actions on Github and having that generate a file for us is pretty awesome. I'm sure you're already thinking about what else you can do with this technique.
+
+---
 
 # Finished Code
 
