--- a/src/slides/01_05.md
+++ b/src/slides/01_05.md
@@ -11,6 +11,8 @@ You've got a Github Action and you want to make sure it runs not just once or wh
 
 I'll give you a couple of seconds to pause the video and see how you'd have solved it.
 
+---
+
 # Solution
 
 For this example. I'm using the same action from the previous video, but you can use any action you want. The trick here is that we can run an action using a cron command.
@@ -26,12 +28,13 @@ on:
 
 A cron command lets you use a special syntax that lets you specify a specific or a recurring date. It has five fields
 
-┌───────────── minute (0 - 59)
-│ ┌───────────── hour (0 - 23)
-│ │ ┌───────────── day of the month (1 - 31)
-│ │ │ ┌───────────── month (1 - 12 or JAN-DEC)
-│ │ │ │ ┌───────────── day of the week (0 - 6 or SUN-SAT)
-│ │ │ │ │
+┌───────── minute (0 - 59)
+│ ┌───────── hour (0 - 23)
+│ │ ┌───────── day of the month (1 - 31)
+│ │ │ ┌───────── month (1 - 12 or JAN-DEC)
+│ │ │ │ ┌───────── day of the week (0 - 6 or SUN-SAT)
+
+---
 
 ---
 
@@ -48,6 +51,12 @@ A cron command lets you use a special syntax that lets you specify a specific or
 The maximum amount of time you can run something IS indeed every five minutes and remember that when running a lot of actions you might run into usage limits and increased pricing.
 
 If you want to play around with the timing before you submit an action, a great site to check is [Crontab Guru](https://crontab.guru/), which has an interactive tool and links to examples and tips you can use when running cron jobs.
+
+---
+
+# Conclusion
+
+Crontab has been around for a long time. It's a great way to define repetitive task and actions that you want to perform. It's amazing that the simple five variable spec lets you define just about any deployment sequence you can think of.
 
 > >
 
