Added more slides

--- a/src/slides/01_01.md
+++ b/src/slides/01_01.md
@@ -1,11 +1,11 @@
 ---
-title: Rebase instead of Merge
+title: Copying Empty History
 slide: '<!-- .slide: data-visibility="hidden"-->'
 ---
 
 <!-- .slide: data-state="layout-title" class="bg-dark"-->
 
-# Empty History
+# Cloning A repo with an empty history
 
 > >
 
