--- a/src/slides/01_02.md
+++ b/src/slides/01_02.md
@@ -1,5 +1,5 @@
 ---
-title: Rebase instead of Merge
+title: Merging a Linear History
 slide: '<!-- .slide: data-visibility="hidden"-->'
 ---
 
@@ -7,7 +7,7 @@ slide: '<!-- .slide: data-visibility="hidden"-->'
 
 ---
 
-# Merging a Linear History
+# How to you Merge a Linear History?
 
 > >
 
