--- a/src/slides/01_05.md
+++ b/src/slides/01_05.md
@@ -1,85 +1,54 @@
 ---
-title: Run a Scheduled Action
+title: Fixing a committed password
 slide: '<!-- .slide: data-visibility="hidden"-->'
 ---
 
 <!-- .slide: data-state="layout-title" class="bg-dark"-->
 
-# Scheduling Actions
+---
 
-You've got a Github Action and you want to make sure it runs not just once or when the users push something to your repo, but everyday at 8:30am. How would you do that?
+# Fixing a committed password
+
+Ocassionaly, you may end up pushing a commit or a file that has some sensitive information, like a password or API key. You don't want to destroy your entire history, but make a more surgical change. Assumig you've submitted a file with a password and then some other commits, how do you make sure Github doesn't store passwords in it's history.
 
 I'll give you a couple of seconds to pause the video and see how you'd have solved it.
 
----
+Alright. There's a few ways to do this and in the last video, I showed you how to delete the entire history of a project. For this one. In a previous video, I showed you how to do a rebase, but we need more surgical and I'm going to use regular Git to take care of it.
 
-# Solution
+Here's a project where I've done a series of commits and you can see here that I have one here called "uploaded credentials". That's what I want to get rid of, but I've done a few commits after that.
 
-For this example. I'm using the same action from the previous video, but you can use any action you want. The trick here is that we can run an action using a cron command.
+You can see commits on Github by adding the `/commits` to the URL of the project.
 
-Because we're using that action and it does require a Secret, make sure you run this on a repository that has that secret stored in it if you want to use that same action.
+I have this same project in my local hard drive and to take care of it, I'm going to do an interactive rebase, but first, let's see the list of commits on our local machine.
 
-I'm going to modify the `on` section of the action so that it uses cron to run at a specified time.
+I can do that by issuing a `git log --oneline`. I like the online option because it makes the log a lot shorter.
+
+We uploaded the credentials on this commit. We want to delete that commit from history, but also make sure that the other changes to the repo are accepted.
+
+First, we need to do a commit that deletes this authentication file.
+
+git add -A && git commit -m "Deleted Authentication"
+
+Now, lets do an interactive rebase.
 
 ```
-on:
-  cron: '30 8 * * *'
+git rebase -i HEAD~4
 ```
 
-A cron command lets you use a special syntax that lets you specify a specific or a recurring date. It has five fields
+This means that we want to rebase the repo with the interactive option and we want to work with the last four files.
 
-┌───────── minute (0 - 59)
-│ ┌───────── hour (0 - 23)
-│ │ ┌───────── day of the month (1 - 31)
-│ │ │ ┌───────── month (1 - 12 or JAN-DEC)
-│ │ │ │ ┌───────── day of the week (0 - 6 or SUN-SAT)
+This will fire up our editor. That might be set up to VIM on your machine. I have mine set to Atom.
 
----
+You can see a lot of options written out in the comments. What I'm going to do here is re-order the commits so that there is a first commit, and then I'll do my adding and deleting in a row instead of in the order I did it in.
 
----
+I'm going to switch the two commits to the fix option. That option is going to squash these commits, but get rid of the log message.
 
-## Options
+Once I'm done I'll take a look at the log again and you can see that the two offending commits are gone as if they never happened. Let me push this into github.
 
-`*` The wildcard value runs every instance. So if you want to run every day of the month you would use the wildcard value, otherwise, specify a number.
-
-`,` A comma lets you run a command in more than one time slot. So if we wanted to run this on sunday and monday only, you could use 0,1 for the day of the week value.
-
-`-` You can also use a range of values so that if you use 1-5 for the day of the week value, it would run Monday through Friday.
-
-`/` You can also step through a series of values. So if you wanted to run an action every five minutes. You could use 0/5 as the value for minute.
-
-The maximum amount of time you can run something IS indeed every five minutes and remember that when running a lot of actions you might run into usage limits and increased pricing.
-
-If you want to play around with the timing before you submit an action, a great site to check is [Crontab Guru](https://crontab.guru/), which has an interactive tool and links to examples and tips you can use when running cron jobs.
-
----
+```
+git push -f
+```
 
 # Conclusion
 
-Crontab has been around for a long time. It's a great way to define repetitive task and actions that you want to perform. It's amazing that the simple five variable spec lets you define just about any deployment sequence you can think of.
-
-> >
-
-```
-name: Favorite Google Fonts
-
-on:
-  cron: '30 8 * * *'
-
-jobs:
-  build:
-    runs-on: ubuntu-latest
-    env:
-      google_api_key: ${{secrets.GOOGLE_API_KEY}}
-
-    steps:
-      - uses: actions/checkout@v2
-
-      - name: Get the Font List
-        run: |
-          git config --global user.name "${GITHUB_ACTOR}"
-          git config --global user.email "${INPUT_EMAIL}"
-          curl -s --url https://www.googleapis.com/webfonts/v1/webfonts?key=${{secrets.GOOGLE_API_KEY}} >> fontsList.json
-          git add -A && git commit -m "Updated Fonts List"
-          git push --set-upstream origin main
-```
+Interactive commits are super useful, but do create permanent changes so be extremely careful. There are a lot of options available that let you re-write the history of your project.
