--- a/src/slides/01_13.md
+++ b/src/slides/01_13.md
@@ -5,7 +5,7 @@ slide: '<!-- .slide: data-visibility="hidden"-->'
 
 <!-- .slide: data-state="layout-title" class="bg-dark"-->
 
-# Docker Container Actions
+# Creating a Docker Container Action
 
 Actions are great, but the syntax for running commands can be a bit limiting, plus they're a little hard to share. You can create actions more explicitly by using docker containers and then having it execute your shell scripts, but how would you do that?
 
