--- a/src/slides/01_14.md
+++ b/src/slides/01_14.md
@@ -5,7 +5,7 @@ slide: '<!-- .slide: data-visibility="hidden"-->'
 
 <!-- .slide: data-state="layout-title" class="bg-dark"-->
 
-# Build and Deploy your Sites
+# Building and Deploying your Sites
 
 The typical modern web project has different types of build processes for developing, testing and building applications. You can deploy static sites and Apps using Github, but how would you let Github help you run your processes and deploy sites on their servers?
 
