--- a/src/slides/01_04.md
+++ b/src/slides/01_04.md
@@ -1,152 +1,51 @@
 ---
-title: Pushing Files Back to Github
+title: Deleting your Commit History
 slide: '<!-- .slide: data-visibility="hidden"-->'
 ---
 
 <!-- .slide: data-state="layout-title" class="bg-dark"-->
 
-# Using Secrets
+---
 
-> >
+# Deleting your Commit History
 
-When working with project, it's really important to be able to store certain ids, variables and special passwords securely. For this Challenge, I want you to store a secret using Github, and retrieve it using Github Actions.
+Git is such a fantastic tool, and it' a great idea to commit and push often, since it's a great way to store changes to a project in the cloud, but ocassionally, I'd like to publish a project on Github with a clean commit history. How would you delete ALL commit history on Github.
 
 I'll give you a couple of seconds to pause the video and see how you'd have solved it.
 
-To store a secret in Github, you'll need to
-
-1. Go to your account
-1. Find a repository that you want to add a secret to
-1. Click on settings
-1. Choose secrets
-
-Now, you can create a secret that will be stored by Github and accessible, but not viewable by anyone with access to this account.
-
-1. Click on New Repository Secret
-2. Give the Secret a Name
-3. Paste in the value of your secret.
-
-Before you click on the Add Secret button, make sure that this secret is stored somewhere else securely. You can use a password manager to store a secure note.
-
-You won't be able to retrieve this secret once you hit that green button.
-
-1. Hit the Add Secret button
-
-Your options after you add a secret are only to remove it or update it.
-
-You can use this secret with Github Actions as part of your build process.
-
----
-
-# Walking through the code
-
-Let's take a look at the action that will take care of this:
-
-```yml
-name: Favorite Google Fonts
-```
-
-First, we start off by giving an action a name.
-
-```yml
-on:
-  push:
-    branches: [main]
-  pull_request:
-    branches: [main]
-```
-
-We can specify when this action runs, and we're choosing to trigger it when someone pushes to the main branch. I'm also showing you that you can run an action when a pull request to the main branch is approved.
-
-```yml
-jobs:
-  build:
-    runs-on: ubuntu-latest
-```
-
-Next, we ask that this job run on an ubuntu server
+Here's what I would do. You can create what's called an orphan branch. This is a branch that has all of the files as the current branch without any history.
 
 ```
-    env:
-      google_api_key: ${{secrets.GOOGLE_API_KEY}}
+git checkout --orphan clean_branch
 ```
 
-Now we can make a reference to the secret we created earlier by using an environment variable that will get used by our script.
-
-```YML
-    steps:
-      - uses: actions/checkout@v2
-```
-
-Since we want to perform these actions with our repo, we want to use Githubs checkout action so we'll have access to those files.
-
-```yml
-- name: Get the Font List
-```
-
-jobs can be named since you can run more than one job in an action.
+Now you'll need to add and commit the files into a history.
 
 ```
-  run: |
+git add -A
+git commit -am "Squeaky Clean History"
 ```
 
-We can run our commands as if we were typing them from the terminal. If we ant to type in more than one command we can use the pipe character
+This branch is going to replace your project's main branch, so let's go ahead and delete that.
 
 ```
-git config --global user.name "${GITHUB_ACTOR}"
-git config --global user.email "${INPUT_EMAIL}"
+git branch -D main
 ```
 
-When you run github commands in this linux terminal, you're going to be running them as if this was a new machine and whenever you are running a new machine, you'll need to configure your user name and email.
-
-Github gives you a few environment variables you can use to set this up. I'm using the github_actor as well as input_email variables. You can get a list of all of the variables available at [this URL](https://docs.github.com/en/actions/reference/environment-variables).
+Now we can take our current orphan branch and rename it to the name of our main branch.
 
 ```
-curl -s --url https://www.googleapis.com/webfonts/v1/webfonts?key=${{secrets.GOOGLE_API_KEY}} >> fontsList.json
+git branch -m main
 ```
 
-Now we can run the curl command in the terminal, which lets you pull up a website. The -s option means CURL will run silently since we just want the output of what this URL will give us. The URL option lets you specify the URL.
-
-We want to output the results of this command to a file, so we're using fontsList.json.
+Now it's time to push
 
 ```
-git add -A && git commit -m "Updated Fonts List"
-git push --set-upstream origin main
+git push -f origin main
 ```
-
-It's great that we've generated the report and created a file, but we want the file to be added to our repository. to do that we're going to need to add, commit and then push the files back to our repository.
-
----
 
 # Conclusion
 
-The ability to do something using Actions on Github and having that generate a file for us is pretty awesome. I'm sure you're already thinking about what else you can do with this technique.
+Now the commit history at Github will be nice and clean. What happens in local, sometimes doesn't need to go to Github. Orphan branches are a pretty useful way to keep things clean.
 
----
-
-# Finished Code
-
-```yml
-name: Favorite Google Fonts
-
-on:
-  push:
-    branches: [main]
-
-jobs:
-  build:
-    runs-on: ubuntu-latest
-    env:
-      google_api_key: ${{secrets.GOOGLE_API_KEY}}
-
-    steps:
-      - uses: actions/checkout@v2
-
-      - name: Get the Font List
-        run: |
-          git config --global user.name "${GITHUB_ACTOR}"
-          git config --global user.email "${INPUT_EMAIL}"
-          curl -s --url https://www.googleapis.com/webfonts/v1/webfonts?key=${{secrets.GOOGLE_API_KEY}} >> fontsList.json
-          git add -A && git commit -m "Updated Fonts List"
-          git push --set-upstream origin main
-```
+This is also a great way to reset things when playing with git and Github, but I do suggest you use a private repo for your experiments.
